correction de l'alignement

--- a/front-end/src/app/quizzes/quiz-list-select/quiz-list-select.component.scss
+++ b/front-end/src/app/quizzes/quiz-list-select/quiz-list-select.component.scss
@@ -15,7 +15,6 @@
 }
 .quiz-list{
   color: #3d3b3b;
-  margin-left: 17%;
 }
 
 .keyboard {
@@ -78,6 +77,3 @@
 
 }
 
-.instruction{
-  position: absolute;
-}
