--- a/front-end/src/app/themes/theme-list/theme-list.component.scss
+++ b/front-end/src/app/themes/theme-list/theme-list.component.scss
@@ -76,7 +76,7 @@
 
 
 .theme-list{
-  margin-left: 30%;
+  text-align: center;
 }
 
 .instruction{
